2004-02-01  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-01-13  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.

2004-01-05  Mikael Hallendal  <micke@imendio.com>

	* configure.in: 
	- Don't try to output removed Makefiles in libegg/*
	- Output .desktop and .keys files.

2004-01-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on GTK+ 2.3.1.
	
	* Makefile.am:
	* libegg/:
	Remove libegg!

	* src/dh-window.c:
	* ui/window.ui:
	* src/Makefile.am:
	Switch from EggAction to GtkAction.

2003-12-14  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

2003-09-15  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "tr" (Turkish) to the languages' list.

2003-06-29  Mikael Hallendal  <micke@imendio.com>

	* src/dh-main.c: include string.h, fixes warning on FreeBSD.

2003-06-29  Richard Hult  <richard@imendio.com>

	* misc/devhelp.el: 
	* misc/devhelp.vim: Add comment about -g. 

2003-06-29  Mikael Hallendal  <micke@imendio.com>

        * NEWS: Updated, missed this in the 0.7 tarball.

        * Release 0.7

	* configure.in: Bumped to 0.7
	
	* devhelp.spec.in: Updated for 0.7 and new web site.

2003-06-29  Richard Hult  <richard@imendio.com>

	* src/dh-window.c (dh_window_new): Don't make the size relative to
	the resolution, that didn't work out very well.

2003-06-28  Mikael Hallendal  <micke@imendio.com>

	* src/dh-window.c: 
	* (window_activate_action): Added link to project page in about dialog.

2003-06-28  Richard Hult  <richard@imendio.com>

	* src/dh-base.c (base_init_books): Use g_get_home_dir and
	g_build_filename.
	(base_sort_books, book_sort_func): Sort the toplevel list of
	books. Fixes bug #111535.

	* src/*.c: Clean up includes.

	* src/dh-main.c: Revert accidental commit. 

	* src/dh-window.c (dh_window_new): s/gtk_type_new/g_object_new/.
