@@ -13,3 +13,4 @@ dh-marshal.c
 dh-marshal.h
 gnome_devhelp_idl_stamp
 test-profile
+devhelp.pc
