@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+libgnomeui_serverdir=@libexecdir@
+
+Name: devhelp
+Description: devhelp
+Requires: libgnomeui-2.0 gtk+-2.0 gnome-vfs-2.0
+Version: @VERSION@
+Libs: -L${libdir}/devhelp -ldevhelp
+Cflags: -I${includedir}/devhelp
